# luma

./: .bumpversion.toml  .codespell-ignore  .cursorrules  .gitignore  .luacheckrc  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.md  ENHANCEMENTS_COMPLETE.md  FEATURE_COMPLETE.md  JINJA2_PARITY.md  LICENSE  MISSING_FEATURES.md  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  TRUSTED_PUBLISHING_SETUP.md  VERSION.md  WHITESPACE_DESIGN.md  cliff.toml  luma-0.1.0-1.rockspec  luma-1.0.0-1.rockspec  luma-1.0.0.rockspec  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: benchmark.lua  jit_profile.lua  memory_profile.lua  run.lua  stress_test.lua
bindings/python/: .gitignore  MANIFEST.in  PYPI.md  README.md  pyproject.toml  requirements.txt
bindings/python/examples/: README.md  basic.py  flask_app.py  kubernetes.py
bindings/python/luma/: __init__.py  environment.py  exceptions.py  loaders.py  template.py
bindings/python/tests/: test_environment.py  test_filters.py  test_template.py
docs/: .markdownlint.json  API.md  Gemfile  INTEGRATION_GUIDES.md  JINJA2_MIGRATION.md  README.md  WHITESPACE.md  _config.yml  documentation.md  examples.md  getting-started.md  index.md
examples/: README.md  ansible_playbook.luma  hello.luma  helm_chart.luma  html_email.luma  kubernetes.luma  kubernetes_manifest.luma  run_k8s_example.lua  run_terraform_example.lua  terraform_module.luma
luma/: init.lua  version.lua
spec/: additional_tests_spec.lua  autoescape_spec.lua  call_with_caller_spec.lua  dash_trim_spec.lua  do_spec.lua  filter_block_spec.lua  filter_named_args_spec.lua  filters_extended_spec.lua  include_modifiers_spec.lua  inheritance_spec.lua  inline_mode_spec.lua  inline_semicolon_spec.lua  integration_spec.lua  jinja_compat_spec.lua  jinja_trim_spec.lua  (+12 more)
(+118 files in other folders)
