[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luma-py"
version = "0.1.0-rc.9"
description = "Lua-powered templating engine with 100% Jinja2 compatibility"
readme = "README.md"
authors = [
    {name = "Luma Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
keywords = ["template", "templating", "jinja2", "lua", "luma"]
requires-python = ">=3.9"
dependencies = [
    "lupa>=2.0",  # LuaJIT bindings for Python
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
flask = ["flask>=2.0"]
django = ["django>=3.2"]

[project.urls]
Homepage = "https://github.com/santosr2/luma"
Documentation = "https://luma.readthedocs.io"
Repository = "https://github.com/santosr2/luma"
"Bug Tracker" = "https://github.com/santosr2/luma/issues"

[tool.setuptools]
packages = ["luma"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
